# dskehuduan

./: .gitignore  README.md  app.py  build.py  config.py  debug_ws_sniffer.py  detect_buyer_context.py  find_api.py  fix_all_final.py  fix_channel.py  fix_final2.py  fix_load_cookies2.py  fix_login_cookies.py  fix_runner_cookies.py  fix_shops.py  fix_transfer_api.py  fix_transfer_browser.py  fix_transfer_final.py  installer.iss  pdd_config.json  pyproject.toml  requirements.txt  sniff2.py  sniff3.py  sniff_agents.py  sniff_api.py  sniff_pdd_chat.py  sniff_result.json  test_agents.py  test_all_apis.py  test_context_api.py  test_detect_footprint.py  test_order_data.py
automation/: uhaozu.py
browser_plugin/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
channel/: base_channel.py
core/: db_client.py  encrypt.py  exchange_number.py  select_number.py  server_api.py  task_runner.py
docs/: AI客服系统 V2 完整技术架构  api_changelog.md  plugin_development.md  plugin_transfer_human.md  宝塔部署教程.md  需求文档_v3.1.md
models/: __init__.py  blacklist.py  conversation.py  database.py  industry.py  knowledge.py  learning.py  message.py  pdd_order.py  refund.py  rule.py  shop.py  stats.py  user.py
modules/: __init__.py  ai_engine.py  doubao_ai.py  emotion_detector.py  knowledge_engine.py  rules_engine.py  scheduler.py
routes/: __init__.py  api.py  auth.py  blacklist.py  dashboard.py  industry.py  knowledge.py  learning.py  messages.py  pdd_orders.py  refund.py  risk.py  rules.py  shop.py  stats.py
templates/: base.html  change_password.html  dashboard.html  (+1 more)
(+181 files in other folders)
